<resources>
    <string name="app_name">CoSport</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Логин</string>
    <string name="prompt_firstname">Имя</string>
    <string name="prompt_surname">Фамилия</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_gender_f">Ж</string>
    <string name="prompt_gender_m">М</string>
    <string name="prompt_gender_o">Другое</string>
    <string name="prompt_prof_sportsman">Профессиональный спортсмен</string>
    <string name="prompt_password_conf">Подтвердите пароль</string>
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_city">Город</string>
    <string name="prompt_occupation">Занятость</string>
    <string name="prompt_social_network">Ссылка на соцсети</string>
    <string name="action_register_short">У меня нет аккаунта, присоединиться</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Имя не должно быть пустым</string>
    <string name="invalid_password">Пароль должен содержать больше 5 символов</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_city">Поле "Город" не должен быть пустым</string>
    <string name="invalid_password_confirm">Пароли не совпадают</string>
    <string name="invalid_phone">Некорректный номер телефона</string>
    <string name="invalid_social_network">Поле ссылки на социальные сети не должно быть пустым</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My name</string>
    <string name="nav_header_subtitle">android@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Мероприятия</string>
    <string name="menu_login">Войти</string>
    <string name="menu_teams">Мои команды</string>
    <string name="menu_places">Площадки рядом</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_register">Регистрация</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="occupations">
        <item>Ученик</item>
        <item>Студент</item>
        <item>Работаю</item>
        <item>Безработный</item>
    </string-array>
</resources>
